Update to use zi for building and running tests