@@ -61,46 +61,13 @@
   </dependencies>
 
   <build>
-    <resources>
-      <resource>
-	<directory>src/main/clojure</directory>
-      </resource>
-      <resource>
-	<directory>src/main/resources</directory>
-      </resource>
-    </resources>
     <plugins>
       <plugin>
-	<groupId>com.theoryinpractise</groupId>
-	<artifactId>clojure-maven-plugin</artifactId>
-	<version>1.3.8</version>
-	<configuration>
-	  <sourceDirectories>
-	    <sourceDirectory>src/main/clojure</sourceDirectory>
-	  </sourceDirectories>
-	  <testSourceDirectories>
-	    <testSourceDirectory>src/test/clojure</testSourceDirectory>
-	  </testSourceDirectories>
-	  <clojureOptions>-Xmx512m -Djava.awt.headless=true -XX:MaxPermSize=256m</clojureOptions>
-          <temporaryOutputDirectory>false</temporaryOutputDirectory>
-	  <warnOnReflection>true</warnOnReflection>
-	</configuration>
-	<executions>
-	  <execution>
-	    <id>compile-clojure</id>
-	    <phase>compile</phase>
-	    <goals>
-	      <goal>compile</goal>
-	    </goals>
-	  </execution>
-	  <execution>
-	    <id>test-clojure</id>
-	    <phase>test</phase>
-	    <goals>
-	      <goal>test</goal>
-	    </goals>
-	  </execution>
-	</executions>
+        <groupId>org.cloudhoist.plugin</groupId>
+        <artifactId>zi</artifactId>
+      </plugin>
+      <plugin>
+        <artifactId>maven-site-plugin</artifactId>
       </plugin>
     </plugins>
   </build>
